[package]
name = "drop-dac-override"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", rev = "1066c6c" }
aya-log = { git = "https://github.com/aya-rs/aya", rev = "1066c6c" }
drop-dac-override-common = { path = "../drop-dac-override-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "drop-dac-override"
path = "src/main.rs"
